// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it disables the submit button while loading 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        onClick={[MockFunction]}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Edit Shipping Method
          </span>
          <button
            className="headerButton"
            disabled={false}
            onClick={[MockFunction]}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          >
            <FormError
              classes={
                Object {
                  "root": "errorContainer",
                }
              }
              errors={
                Array [
                  Object {
                    "message": "Form Error",
                  },
                ]
              }
            />
            <div
              className="root"
            >
              <label
                aria-label=""
                className="root"
                htmlFor="shipping_method--flatrate|flatrate"
              >
                <input
                  checked={true}
                  className="input"
                  disabled={false}
                  id="shipping_method--flatrate|flatrate"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="radio"
                  value="flatrate|flatrate"
                />
                <span
                  className="icon"
                >
                  <svg
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                  </svg>
                </span>
                <span
                  className="label"
                >
                  <span>
                    Flat Rate
                  </span>
                  <div
                    className="price"
                  >
                    <span>
                      $
                    </span>
                    <span>
                      99
                    </span>
                    <span>
                      .
                    </span>
                    <span>
                      00
                    </span>
                  </div>
                </span>
              </label>
            </div>
            <p
              className="root"
            />
          </div>
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onClick={[MockFunction]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={true}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Update"
                  id="global.updateButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`it renders correctly 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        onClick={[MockFunction]}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Edit Shipping Method
          </span>
          <button
            className="headerButton"
            disabled={false}
            onClick={[MockFunction]}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          >
            <FormError
              classes={
                Object {
                  "root": "errorContainer",
                }
              }
              errors={Array []}
            />
            <div
              className="root"
            >
              <label
                aria-label=""
                className="root"
                htmlFor="shipping_method--flatrate|flatrate"
              >
                <input
                  checked={true}
                  className="input"
                  disabled={false}
                  id="shipping_method--flatrate|flatrate"
                  onBlur={[Function]}
                  onChange={[Function]}
                  type="radio"
                  value="flatrate|flatrate"
                />
                <span
                  className="icon"
                >
                  <svg
                    fill="none"
                    height={24}
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    strokeWidth="2"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                  </svg>
                </span>
                <span
                  className="label"
                >
                  <span>
                    Flat Rate
                  </span>
                  <div
                    className="price"
                  >
                    <span>
                      $
                    </span>
                    <span>
                      99
                    </span>
                    <span>
                      .
                    </span>
                    <span>
                      00
                    </span>
                  </div>
                </span>
              </label>
            </div>
            <p
              className="root"
            />
          </div>
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onClick={[MockFunction]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Update"
                  id="global.updateButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;
